--- a/src/LabVIEW/G-Audio/lib/g_audio_64.framework/Versions/A/Resources/Info.plist
+++ b/src/LabVIEW/G-Audio/lib/g_audio_64.framework/Versions/A/Resources/Info.plist
@@ -7,17 +7,17 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>g_audio_x64</string>
+	<string>g_audio_64</string>
 	<key>CFBundleIdentifier</key>
 	<string>dataflowg.g-audio</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>g_audio_x64</string>
+	<string>g_audio_64</string>
 	<key>CFBundlePackageType</key>
 	<string>FMWK</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.2.1</string>
+	<string>0.3.0</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
