--- a/src/C++/g_audio.vcxproj
+++ b/src/C++/g_audio.vcxproj
@@ -165,6 +165,7 @@
     <ClInclude Include="minimp3.h" />
     <ClInclude Include="minimp3_ex.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="stb_image.h" />
     <ClInclude Include="stb_vorbis.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
