--- a/src/C++/g_audio.vcxproj.filters
+++ b/src/C++/g_audio.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClInclude Include="id3tag.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="stb_image.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
