--- a/src/C++/xcode/g_audio/Info.plist
+++ b/src/C++/xcode/g_audio/Info.plist
@@ -19,6 +19,6 @@
 	<key>CFBundleVersion</key>
 	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 Dataflow_G. All rights reserved.</string>
+	<string></string>
 </dict>
 </plist>
